# llm-intent-sdn

./: .env  Makefile  README.md  env.example  pyproject.toml  run.py  setup.py
docs/: DEPLOYMENT.md
examples/: intent_examples.py
scripts/: llm_sdn_controller.py  start_mininet.py  start_ryu.py  test_system.py  topology.py
src/: __init__.py
src/llm_intent_sdn/: __init__.py  config.py
src/llm_intent_sdn/api/: __init__.py  main.py
src/llm_intent_sdn/api/routes/: health.py  intent.py  monitoring.py  network.py
src/llm_intent_sdn/api/static/: app.js  index.html
src/llm_intent_sdn/models/: __init__.py  intent.py  llm.py  network.py
src/llm_intent_sdn/services/: __init__.py  intent_processor.py  llm_service.py  network_monitor.py  ryu_service.py
src/llm_intent_sdn/utils/: __init__.py  logging.py  validators.py
